# burner-firmware

./: .gitignore  CMakeLists.txt  README.md
app/include/: burn-firmware.h
app/src/: burn-firmware.c
